--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,7 @@
 body {
-    color: red;
+    color: #333;
     text-align: center;
-    font-family: "Courier";
+    font-family: Arial;
     font-size: 16px;
     margin: 0;
     padding: 0;
@@ -36,4 +36,11 @@ body {
 
 #post {
     padding: 1em;
+}
+
+#footer {
+    background: #777;
+    color: white;
+    text-align: center;
+    padding: 0.5em;
 }
